examples/bad/06-WrongArgumentTypes.tms
int fun(int x, boolean y, string z) {
  return x;
}

void main() {
  int l = fun(5, true, false);
  return;
}